--- a/src/index.html
+++ b/src/index.html
@@ -14,21 +14,21 @@
   <div id="random" class="bckg d-flex justify-content-center align-items-center">
     <div class="card col-2">
       <div class="row">
-        <div class="col d-flex justify-content-start">
+        <div class="col d-flex justify-content-start" id="cardHead">
           ♠
         </div>
 
       </div>
 
       <div class="row ">
-        <div class="col d-flex justify-content-center">
+        <div class="col d-flex justify-content-center" id="cardNum">
             5
         </div>
 
       </div>
 
       <div class="row ">
-        <div class="col d-flex justify-content-end">
+        <div class="col d-flex justify-content-end" id="cardFoot">
           ♠
         </div>
 
@@ -43,7 +43,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"></script>
-    <script src="/src/app.js"></script>
+    <script src="./app.js"></script>
 </body>
 
 </html>
